--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,18 @@
  * @Author: huangyuhui
  * @since: 2020-07-07 16:58:12
  * @LastAuthor: huangyuhui
- * @lastTime: 2020-07-07 16:58:32
+ * @lastTime: 2020-07-13 11:40:18
  * @message: 
- * @FilePath: \supply-chain-cli\public\index.html
+ * @FilePath: \supply-chain-system\public\index.html
 -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="keywords" content="迅宇供应链OPS系统">
   <title>supply-chain-cli</title>
 </head>
 
